--- a/client/package.json
+++ b/client/package.json
@@ -2,12 +2,12 @@
   "name": "weather-app",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "ng": "../node_modules/.bin/ng",
+    "start": "../node_modules/.bin/ng serve",
+    "build": "../node_modules/.bin/ng build",
+    "test": "../node_modules/.bin/ng test",
+    "lint": "../node_modules/.bin/ng lint",
+    "e2e": "../node_modules/.bin/ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~10.1.1",
     "@angular/router": "~10.1.1",
     "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
     "luxon": "^1.25.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
