--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# intellij configs
+.idea/
+
 # compiled output
 dist
 tmp
@@ -8,7 +11,7 @@ out-tsc
 bazel-out
 
 # dependencies
-node_modules
+**/node_modules
 
 # profiling files
 chrome-profiler-events*.json
