--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,15 @@
     "jade": "~1.11.0",
     "mongoose": "^5.10.9",
     "morgan": "~1.9.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "node-schedule": "^1.3.2",
+    "timezone-js": "^0.4.13"
   },
   "devDependencies": {
+    "axios": "^0.20.0",
+    "cron": "^1.8.2",
     "mongodb": "^3.6.2",
+    "node-cron": "^2.0.3",
     "nodemailer": "^6.4.14"
   }
 }
