added user saved locations

--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,10 @@
   },
   "devDependencies": {
     "axios": "^0.20.0",
+    "bcrypt": "^5.0.0",
+    "config.json": "0.0.4",
     "cron": "^1.8.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.2",
     "node-cron": "^2.0.3",
     "nodemailer": "^6.4.14"
