--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.1.1",
-    "@angular/cdk": "^10.2.1",
+    "@angular/animations": "^10.1.6",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.1.1",
     "@angular/compiler": "~10.1.1",
     "@angular/core": "~10.1.1",
     "@angular/forms": "~10.1.1",
-    "@angular/material": "^10.2.1",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.1.1",
     "@angular/platform-browser-dynamic": "~10.1.1",
     "@angular/router": "~10.1.1",
@@ -25,7 +25,7 @@
     "jquery": "^3.5.1",
     "luxon": "^1.25.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.0.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
