--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ bazel-out
 # dependencies
 **/node_modules
 
+# build file
+**/dist
+
 # profiling files
 chrome-profiler-events*.json
 speed-measure-plugin*.json
